# action_github_exercice

./: pyproject.toml
.github/workflows/: playwright.yaml
tests/: test_google.py
